Added doc and changed DB value

--- a/Bankapplication/App.config
+++ b/Bankapplication/App.config
@@ -4,6 +4,6 @@
     <add name="Connection" connectionString="mongodb://localhost:27017/" />
   </connectionStrings>
   <appSettings>
-    <add key="BankDB" value="BankApplication" />
+    <add key="BankDB" value="Bank" />
   </appSettings>
 </configuration>
